--- a/style.css
+++ b/style.css
@@ -92,7 +92,7 @@ html {
 	height: 100vh;
 	display: grid;
 	place-items: center;
-	background-color: #FFA500;
+	background-color: #798081;
 	overflow: hidden;
 }
 
